--- a/_include/head.html
+++ b/_include/head.html
@@ -2,5 +2,8 @@
     <title>{{page.title}}</title>
 
     <meta charset="utf-8">
+
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+
     
 </head>
