--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,10 @@
 <head>
     <title>{{page.title}}</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8">
 
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
-
+    <link rel="stylesheet" type"text/css" href="/assets/css/style.css" />
     
 </head>
