Fix padding weirdness

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
-<footer>
-    <div class="container primary-theme">
+<footer class="primary-theme">
+    <div class="container">
         <!-- These should be moved into a separate container if there's need for footer content aside the basic stuff. -->
         <div class="foot-left">
-            <p>&copy; SOBotics 2019</p>
+            &copy; SOBotics 2019
         </div>
         <div class="foot-right">
-            <p>Powered by <a href="https://jekyllrb.com/">Jekyll</a></p>
+            Powered by <a href="https://jekyllrb.com/">Jekyll</a>
         </div>
     </div>
 </footer>
