--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
-<header>
-
-    <div class="primary-theme">
+<header class="primary-theme">
+    <div class="container">
         <h3 class="left logo"><a href="/">SOBotics</a></h3>
 
     </div>
