--- a/_layout/default.html
+++ b/_layout/default.html
@@ -5,7 +5,7 @@
         {% include header.html %}
 
         <main>
-            <div id="container">
+            <div class="container">
                 {{content}}
             </div>
         </main>
