--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,9 +21,8 @@ $color-highlight-all: #ee4444;
 
 .primary-theme {
     color: $color-primary-dark;
-    padding: 20px;
     background: $background-primary;
-
+    padding: 15px;
     a, a:hover {
         color: $color-link-dark;
     }
@@ -37,14 +36,17 @@ header {
 
 footer {
     display: block;
+    width:100%;
+    left: 0;
+    bottom: 0;
     .foot-left {
         float: left;
         width: auto;
         display: inline-block;
     }
     .foot-right {
-        float:right;
-        width:auto;
+        float: right;
+        width: auto;
         display: inline-block;
     }
 }
@@ -58,3 +60,20 @@ main {
     flex: 1 0 auto;
 }
 
+// Make the main content look decent
+
+.container {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
+}
+@media only screen and (min-width: 600px) {
+    .container {
+        width: 85%;
+    }
+}
+@media only screen and (min-width: 990px) {
+    .container {
+        width: 70%;
+    }
+}
