Fancy schmancy sidenav and additional theming

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,6 @@
     <meta charset="utf-8">
 
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
-    <link rel="stylesheet" type"text/css" href="/assets/css/style.css" />
-    
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+    <script src="/assets/js/site.js"></script>
 </head>
