Made the navbar great again, added more people, evicted unwanted spaces

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <div class="topnav right">
             {% include nav.html %}
         </div>
-        <span class="sidenav-trigger" onclick="openSidenav()">&#9776</span>
+        <span class="sidenav-trigger" onclick="openSidenav()">&#9776;</span>
     </div>
 
 </header>
