--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,1 @@
-<a href="/">Contributors</a>
-<a href="/servers/">Server hosts</a>
-
+<a href="/" {% if page.active and page.active == "contributors" %} class="active" {% endif %}>Contributors</a><a href="/servers/" {% if page.active and page.active == "servers" %} class="active" {% endif %}>Server hosts</a>
