--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>{{page.title}}</title>
+    <title>{% if page.title %}{{page.title}} | {% endif %}SOBotics</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8">
